src/styles/Home.module.css
.heroImage {
  width: 500px;
  display: block;
  margin: 0 auto;
}

@media (max-width: 500px) {
  .heroImage {
    width: 95%;
  }
}

.tagline {
  text-align: center;
  margin: 50px 0;
  font-weight: 400;
  font-size: 44px;
  line-height: 1;
}

.services {
  background: #d1be9d;
  padding: 100px 0;
}

.servicesList {
  display: flex;
  list-style: none;
  justify-content: space-around;
  flex-wrap: wrap;
}

@media (max-width: 860px) {
  .servicesList li {
    margin-bottom: 25px;
  }

  .servicesList li:last-of-type {
    margin-bottom: 0;
  }
}

.cta {
  padding: 150px 0;
  text-align: center;
}

.subhead {
  font-size: 36px;
  font-weight: 400;
  line-height: 1;
}

.button {
  background: #d1be9d;
  color: #687142;
  font-size: 32px;
  padding: 25px 100px;
  border-radius: 10px;
  display: inline-block;
  margin-top: 50px;
}

@media (max-width: 500px) {
  .cta {
    padding: 50px 25px;
  }

  .subhead {
    font-size: 32px;
  }

  .button {
    font-size: 24px;
    padding: 25px 50px;
  }
}

